# zkvm-playground

./: Makefile  README.md  output.txt
.github/workflows/: build.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/helpers/: mod.rs
common/src/scenarios/: large_variable_list.rs  mod.rs  print_usize.rs  u64_max_value.rs
r0/host/src/: main.rs
r0/methods/guest/: Cargo.toml
r0/methods/guest/src/: main.rs
sp1/: Cargo.toml
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
