[package]
name = "r0_playground"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
playground-common = { path = "../../../common" }
risc0-zkvm = { version = "^2.0.1", default-features = false, features = ['std'] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
